--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <ul id="party-list">
       <!-- Parties will be dynamically added here -->
   </ul>
-</script>
+  <script src="index.js"></script>
 </body>
 </html>
